<resources>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="app_name">Android UTS</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">How old are you?</string>
    <string name="slide_1_desc">The easiest way to know your age</string>

    <string name="slide_2_title">More detail</string>
    <string name="slide_2_desc">How many days are your birthday? We can calculate</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="polinema_mobile">POLINEMA MOBILE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_today">Display date</string>
    <string name="display_date">Todays Date</string>
    <string name="birthday_date">Date of Birth</string>
    <string name="calculation_text">Calculate</string>
    <string name="clear_results">Clear</string>
    <string name="current_age">Displayed Age</string>
    <string name="years_number">Years</string>
    <string name="months_number">Months</string>
    <string name="days_number">Days</string>
    <string name="next_birthday">Next Birthday</string>
    <string name="age_analysis">Age Analysis</string>
    <string name="total_years">Total Years</string>
    <string name="zero">0</string>
    <string name="total_months">Total Months</string>
    <string name="total_days">Total Days</string>
    <string name="total_hours">Total Hours</string>
    <string name="total_minutes">Total Minutes</string>
    <string name="total_seconds">Total Seconds</string>
    <string name="total_weeks">Total Weeks</string>
    <string name="zodiac">Zodiac</string>
    <string name="none">Pig</string>
</resources>
