<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:id="@+id/scroll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="60dp"
        android:background="#ffffff"
        android:scrollbars="none">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/second_layout_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/birthday_date"
                android:padding="8dp"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/display_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#B2DFDB"
                    android:padding="12dp"
                    android:text="@string/birthday_date"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/birthday_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_layout_wrapper"
                android:layout_marginTop="32dp"
                android:padding="12dp"
                android:text="@string/date_today"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />
            <LinearLayout
                android:id="@+id/button_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/second_layout_wrapper"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_calculate_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:gravity="center|center_horizontal"
                    android:padding="16dp"
                    android:text="@string/calculation_text"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/button_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="1"
                    android:gravity="center|center_horizontal"
                    android:padding="16dp"
                    android:text="@string/clear_results"
                    android:textColor="#000000" />
            </LinearLayout>

            <TextView
                android:id="@+id/age_analysis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_wrapper"
                android:layout_marginTop="10dp"
                android:background="#B2DFDB"
                android:padding="12dp"
                android:text="@string/age_analysis"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TableLayout
                android:id="@+id/extra_information"
                android:layout_width="match_parent"
                android:layout_below="@+id/age_analysis"
                android:layout_marginTop="24dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:layout_height="wrap_content">
                <TableRow android:padding="8dp">

                    <TextView
                        android:id="@+id/total_years"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/total_years"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/total_years_result"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/zero"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow android:padding="8dp">

                    <TextView
                        android:id="@+id/total_months"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/total_months"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/total_months_result"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/zero"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow android:padding="8dp">

                    <TextView
                        android:id="@+id/total_weeks"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/total_weeks"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/total_weeks_result"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/zero"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow android:padding="8dp">

                    <TextView
                        android:id="@+id/total_days"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/total_days"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/total_days_result"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/zero"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow android:padding="8dp">

                    <TextView
                        android:id="@+id/total_hours"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/total_hours"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/total_hours_result"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/zero"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow android:padding="8dp">

                    <TextView
                        android:id="@+id/total_minutes"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/total_minutes"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/total_minutes_result"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/zero"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow android:padding="8dp">

                    <TextView
                        android:id="@+id/total_seconds"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/total_seconds"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/total_seconds_result"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/zero"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow android:padding="8dp">

                    <TextView
                        android:id="@+id/zodiac"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/zodiac"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/zodiac_result"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:text="@string/none"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>