<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:id="@+id/scroll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="40dp"
        android:background="#ffffff"
        android:scrollbars="none">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/first_layout_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/current_date"
                android:padding="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/display_today_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#B2DFDB"
                    android:padding="12dp"
                    android:text="@string/display_date"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/current_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:padding="12dp"
                android:text="@string/date_today"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/second_layout_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/birthday_date"
                android:padding="8dp"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/display_birthday_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#B2DFDB"
                    android:padding="12dp"
                    android:text="@string/birthday_date"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/birthday_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_layout_wrapper"
                android:layout_marginTop="32dp"
                android:padding="12dp"
                android:text="@string/date_today"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />
            <LinearLayout
                android:id="@+id/button_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/second_layout_wrapper"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_calculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:gravity="center|center_horizontal"
                    android:padding="16dp"
                    android:text="@string/calculation_text"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/button_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="1"
                    android:gravity="center|center_horizontal"
                    android:padding="16dp"
                    android:text="@string/clear_results"
                    android:textColor="#000000" />
            </LinearLayout>

            <TextView
                android:id="@+id/age_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_wrapper"
                android:layout_marginTop="32dp"
                android:background="#B2DFDB"
                android:padding="12dp"
                android:text="@string/current_age"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TableLayout
                android:id="@+id/age_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/age_header">
                <TableRow
                    android:padding="24dp">

                    <TextView
                        android:id="@+id/years_in_age"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal"
                        android:text="@string/years_number"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/months_in_age"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal"
                        android:text="@string/months_number"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/days_in_age"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal"
                        android:text="@string/days_number"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/next_birthday_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/age_table"
                android:layout_marginTop="32dp"
                android:background="#B2DFDB"
                android:padding="12dp"
                android:text="@string/next_birthday"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />
            <TableLayout
                android:id="@+id/next_age_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/next_birthday_header">
                <TableRow
                    android:padding="24dp">

                    <TextView
                        android:id="@+id/years_in_birthday"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal"
                        android:text="@string/years_number"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/months_in_birthday"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal"
                        android:text="@string/months_number"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/days_in_birthday"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal"
                        android:text="@string/days_number"
                        android:textColor="#000000"
                        android:textSize="16dp"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>